[gd_scene load_steps=9 format=3 uid="uid://djfpyvlfj6qik"]

[ext_resource type="Script" path="res://Scripts/Menus/Main_Menu/main_menu.gd" id="1_d2srq"]
[ext_resource type="Texture2D" uid="uid://dxxq37daehguu" path="res://assets/Textures/NicholasJDi/Back.png" id="2_qc2fh"]
[ext_resource type="PackedScene" uid="uid://4x6fafcgdalm" path="res://Scenes/Menus/Options_Menu/Options_Menu.tscn" id="3_m43vj"]
[ext_resource type="FontFile" uid="uid://bl6ovrue03k0f" path="res://assets/Fonts/minecraftia/Minecraftia.ttf" id="4_htgj1"]
[ext_resource type="AudioStream" uid="uid://w8kl1f86qdu6" path="res://assets/Sound/Music/alkakrab/Fantasy RPG Music Pack Vol.3/Loops/ogg/Ambient 4 Loop.ogg" id="5_1qjls"]
[ext_resource type="PackedScene" uid="uid://x88arosxsd2o" path="res://Scenes/Menus/Play_Menu/Play_Menu.tscn" id="5_vu1w7"]
[ext_resource type="AudioStream" uid="uid://ds668qylgsr02" path="res://assets/Sound/SFX/tommusic/Free Fantasy SFX Pack By TomMusic/OGG Files/BGS Loops/Forest Day/Forest Day.ogg" id="6_fa1ul"]

[sub_resource type="LabelSettings" id="LabelSettings_6wdit"]
font = ExtResource("4_htgj1")
font_size = 56
font_color = Color(0.564618, 0.667501, 0.930408, 1)
outline_size = 6
outline_color = Color(0.00819378, 0.235508, 1, 1)
shadow_size = 16
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(1, 2)

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d2srq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qc2fh")

[node name="VersionContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Version" type="Label" parent="VersionContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 0.752941)
text = "Version: 0.05 (Alpha)"

[node name="Options_Menu" parent="." instance=ExtResource("3_m43vj")]
visible = false
layout_mode = 1

[node name="Main_Menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Main_Menu"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seporator" type="Control" parent="Main_Menu/VBoxContainer"]
layout_direction = 1
layout_mode = 2

[node name="Title" type="Label" parent="Main_Menu/VBoxContainer"]
layout_mode = 2
text = "Legend Of The Silver Moon"
label_settings = SubResource("LabelSettings_6wdit")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Main_Menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24
alignment = 1

[node name="Seporator" type="Control" parent="Main_Menu/VBoxContainer2"]
layout_direction = 1
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Main_Menu/VBoxContainer2"]
custom_minimum_size = Vector2(170, 190)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Main_Menu/VBoxContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24

[node name="Play" type="Button" parent="Main_Menu/VBoxContainer2/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("4_htgj1")
theme_override_font_sizes/font_size = 18
text = "Play"

[node name="Options" type="Button" parent="Main_Menu/VBoxContainer2/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_htgj1")
theme_override_font_sizes/font_size = 18
text = "Options
"

[node name="Quit" type="Button" parent="Main_Menu/VBoxContainer2/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_htgj1")
theme_override_font_sizes/font_size = 18
text = "Quit
"

[node name="Play_Menu" parent="." instance=ExtResource("5_vu1w7")]
visible = false
layout_mode = 1

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1qjls")
autoplay = true
bus = &"Music - Menu"
parameters/looping = true

[node name="EnvironmentStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fa1ul")
autoplay = true
bus = &"SFX - Environment"
parameters/looping = true

[connection signal="pressed" from="Main_Menu/VBoxContainer2/PanelContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main_Menu/VBoxContainer2/PanelContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main_Menu/VBoxContainer2/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
